snippets/Nemerle.Statechart/Tests/testsuite/positive/exit_point1.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of example.
  /// </summary>
  [statechart(
  <#
  flags testing;
  
  //flags debug;
  
  state A
  {
    a => B;
  }
  
  @B.ex: => A;
  
  state B
  {
    exit: ex;
      
    [Initial]
    state C
    {
      a => D;
    }
    
    state D
    {
      a => C;
      b => ex;
    }
  }
  
  #>)]
  public class example
  {
  }

  module Test
  {
    Main() : void
    {
      def fsm = example();
      def tester = fsm.GetTester();
      tester.ConsoleTestInit();
      tester.Initiate("A", "EntryA");
      tester.Test("a", "C", "ExitA", "EntryB", "EntryC");
      tester.Test("a", "D", "ExitC", "EntryD");
      tester.Test("b", "A", "ExitD", "ExitB", "EntryA");
      fsm.Terminate();
    }
  }
  
/*
BEGIN-OUTPUT
EntryA
[A]
Ok
Processing a 'a' 
ExitA
EntryB
EntryC
[C]
Ok
Processing a 'a' 
ExitC
EntryD
[D]
Ok
Processing a 'b' 
ExitD
ExitB
EntryA
[A]
Ok
END-OUTPUT
*/
