snippets/Nemerle.Statechart/Tests/testsuite/negative/external_sub_machine_not_found.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of example.
  /// </summary>
  [statechart(
  <#
  
  using B; // E: External statemachine not found from type "B"
  
  #>)]
  public class example
  {
  }

